--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,15 +3,15 @@ body {
   padding: 0;
   height: 100vh;
   width: 100vw;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 #root {
@@ -19,4 +19,17 @@ code {
 }
 .map {
   height: 100%;
+}
+.mapCard {
+  z-index: 99999;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+.andrew-btn {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 9999;
+  margin: 5px;
 }
