--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,11 +20,19 @@ code {
 .map {
   height: 100%;
 }
-.mapCard {
-  z-index: 99999;
+.message-form {
+  z-index: 999;
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 5px;
+  right: 5px;
+  max-width: 300px;
+}
+.footer {
+  z-index: 999;
+  position: absolute;
+  bottom: 35px;
+  left: 5px;
+  padding: 5px;
 }
 .andrew-btn {
   position: absolute;
@@ -32,4 +40,11 @@ code {
   left: 0;
   z-index: 9999;
   margin: 5px;
+}
+.thanks-form {
+  z-index: 999;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  max-width: 220px;
 }
